在 Luban.Runner 项目中, 不再新建 cs 文件, 使用 link 链接 Luban.csproj cs 文件

--- a/Luban.Plugins/Luban.Runner/Luban.Runner.csproj
+++ b/Luban.Plugins/Luban.Runner/Luban.Runner.csproj
@@ -29,9 +29,12 @@
       <ProjectReference Include="..\..\Luban\src\Luban.Python\Luban.Python.csproj" />
       <ProjectReference Include="..\..\Luban\src\Luban.Schema.Builtin\Luban.Schema.Builtin.csproj" />
       <ProjectReference Include="..\..\Luban\src\Luban.Typescript\Luban.Typescript.csproj" />
-      <ProjectReference Include="..\..\Luban\src\Luban\Luban.csproj" />
       <ProjectReference Include="..\Luban.DataTarget.Json.Newtonsoft\Luban.DataTarget.Json.Newtonsoft.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Include="..\..\Luban\src\Luban\*.cs" />
+        <Compile Include="..\..\Luban\src\Luban\*\*.cs" />
+    </ItemGroup>
 
 </Project>
