调整 plugin 版本为 8.0, 并增加 privateproxy 实现

--- a/Luban.Plugins/Luban.DataValidator.Strict/Luban.DataValidator.Strict.csproj
+++ b/Luban.Plugins/Luban.DataValidator.Strict/Luban.DataValidator.Strict.csproj
@@ -1,14 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Microsoft.AspNetCore.Http.Generated;MyLibrary.Generated</InterceptorsPreviewNamespaces>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\Luban\src\Luban.Core\Luban.Core.csproj" />
       <ProjectReference Include="..\..\Luban\src\Luban.DataValidator.Builtin\Luban.DataValidator.Builtin.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="PrivateProxy" Version="1.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 
